--- a/level1/question2/index.html
+++ b/level1/question2/index.html
@@ -6,8 +6,7 @@
     <title>JavaScript - MA03 - Question 2</title>
 <body>
 
-
-
+<script src="author.json"></script>
 <script src="script.js"></script>
 </body>
 </html>
